<resources>
    <string name="app_name">project_1</string>
    <string name="todo">TODO</string>
    <string name="registro">Registro</string>
    <string name="email">email</string>
    <string name="nombre">nombre</string>
    <string name="telefono">telefono</string>
    <string name="apellido">Apellido</string>
    <string name="contrase_a">contraseña</string>
    <string name="confirmar_contrase_a">confirmar contraseña</string>
    <string name="registrar">Registrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_map_api_key">AIzaSyBEGpApsit_3zf0snsCVojMEYtTrfP62ZY</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>

    <string name="title">Notificacion</string>
    <string name="message">Body</string>
</resources>