<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registro"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="true"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="center"
            android:singleLine="true"
            android:text="samuel@gmail.com" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="true"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="center"
            android:singleLine="true"
            android:text="samuel" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="true"
            android:ems="10"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="center"
            android:singleLine="true"
            android:text="guerrero" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="true"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="center"
            android:singleLine="true"
            android:text="323232" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="true"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="center"
            android:singleLine="true"
            android:text="12345678" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="true"
            android:ems="10"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="center"
            android:singleLine="true"
            android:text="12345678" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/registrar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>