<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.client.update.ClientUpdateActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_person"
        app:civ_border_color="#ACACAC"
        app:civ_border_width="5dp"
        app:civ_circle_background_color="#D1D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="true"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="center"
            android:singleLine="true"
            android:text="samuel" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="true"
            android:ems="10"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="center"
            android:singleLine="true"
            android:text="guerrero" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="true"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="center"
            android:singleLine="true"
            android:text="323232" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="actualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>